apps/airtrail/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airtrail
  namespace: airtrail
spec:
  selector:
    app: airtrail
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: airtrail-postgres
  namespace: airtrail
spec:
  selector:
    app: airtrail-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
