apps/airtrail/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: airtrail
  namespace: traefik
spec:
  entryPoints:
    - frp
  routes:
    - match: Host(`flights.${DOMAIN}`)
      kind: Rule
      middlewares:
        - name: frp-headers
          namespace: traefik
      services:
        - name: airtrail
          port: 3000
          namespace: airtrail
